--- a/main/templates/main/pages/viewproductbycategory.html
+++ b/main/templates/main/pages/viewproductbycategory.html
@@ -16,8 +16,9 @@ List of Food
 
 <section id="foods">
     <div class="header">
-        <h2>Food Product</h2>
+        <h2>{{ category.category_name }}</h2>
     </div>
+    <br>
     <div class="seller container2">
         <div class="foodproduct">
             {% for food in foods %}
