--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -11,21 +11,22 @@
         .checked {
             color: orange;
         }
+
         .dropdown {
             display: block;
 
         }
-        
+
         .dropdown-content {
             display: none;
             position: absolute;
             background-color: #000;
             min-width: 160px;
-            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+            box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
             padding: 12px 16px;
             z-index: 222;
         }
-        
+
         .dropdown:hover .dropdown-content {
             display: block;
         }
@@ -33,6 +34,7 @@
         .d-btn {
             margin: 10px;
         }
+
     </style>
 </head>
 
@@ -45,13 +47,16 @@
             <div class="sing_in_up ">
                 {% if user.is_authenticated %}
                 <div class="dropdown">
-                    <span><i class="fa fa-user-circle"></i> {{ user.first_name | title }} {{ user.last_name | title}}</span>
+                    <span><i class="fa fa-user-circle"></i> {{ user.first_name | title }}
+                        {{ user.last_name | title}}</span>
                     <div class="dropdown-content">
                         <a href="{% url 'customer_index' %}" class="d-btn"><i class="fa fa-user"></i> Profile</a>
                         <br>
-                        <a href="{% url 'customer_pending_order' %}" class="d-btn"><i class="fa fa-shopping-cart"></i> Manage Order</a>
+                        <a href="{% url 'customer_pending_order' %}" class="d-btn"><i class="fa fa-shopping-cart"></i>
+                            Manage Order</a>
                         <br>
-                        <a href="{% url 'main_food' %}" class="d-btn"><i class="fa fa-shopping-bag"></i> Product List</a>
+                        <a href="{% url 'main_food' %}" class="d-btn"><i class="fa fa-shopping-bag"></i> Product
+                            List</a>
                         <br>
                         <a href="{% url 'logout' %}" class="d-btn"><i class="fa fa-sign-out"></i> Logout</a>
                     </div>
@@ -108,7 +113,7 @@
                 <img src="{{ cat.img.url }}" alt="img" />
                 <div class="img-content">
                     <p>{{ cat.category_name }}</p>
-                    <button><a href="#foods">SHOW NOW</a></button>
+                    <button><a href="{% url 'view_product_category' cat.id %}">SHOW NOW</a></button>
                 </div>
             </div>
             {% endfor %}
@@ -143,7 +148,7 @@
                             </div>
                         </div>
                         <div class="buy-now">
-                            <button><a href="{% url 'main_food_show' %}">Buy Now</a></button>
+                            <button><a href="{% url 'main_food_show' food.id %}">Buy Now</a></button>
                         </div>
                     </div>
                 </div>
