--- a/main/templates/main/main-layout.html
+++ b/main/templates/main/main-layout.html
@@ -12,21 +12,22 @@
         .checked {
             color: orange;
         }
+
         .dropdown {
             display: block;
 
         }
-        
+
         .dropdown-content {
             display: none;
             position: absolute;
             background-color: #000;
             min-width: 160px;
-            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+            box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
             padding: 12px 16px;
             z-index: 222;
         }
-        
+
         .dropdown:hover .dropdown-content {
             display: block;
         }
@@ -34,6 +35,7 @@
         .d-btn {
             margin: 10px;
         }
+
     </style>
     {% block stylesheets %}{% endblock stylesheets %}
 </head>
@@ -47,13 +49,16 @@
             <div class="sing_in_up ">
                 {% if user.is_authenticated %}
                 <div class="dropdown">
-                    <span><i class="fa fa-user-circle"></i> {{ user.first_name | title }} {{ user.last_name | title}}</span>
+                    <span><i class="fa fa-user-circle"></i> {{ user.first_name | title }}
+                        {{ user.last_name | title}}</span>
                     <div class="dropdown-content">
                         <a href="{% url 'customer_index' %}" class="d-btn"><i class="fa fa-user"></i> Profile</a>
                         <br>
-                        <a href="{% url 'logout' %}" class="d-btn"><i class="fa fa-shopping-cart"></i> Manage Order</a>
+                        <a href="{% url 'customer_pending_order' %}" class="d-btn"><i class="fa fa-shopping-cart"></i>
+                            Manage Order</a>
                         <br>
-                        <a href="{% url 'main_food' %}" class="d-btn"><i class="fa fa-shopping-bag"></i> Product List</a>
+                        <a href="{% url 'main_food' %}" class="d-btn"><i class="fa fa-shopping-bag"></i> Product
+                            List</a>
                         <br>
                         <a href="{% url 'logout' %}" class="d-btn"><i class="fa fa-sign-out"></i> Logout</a>
                     </div>
@@ -82,7 +87,7 @@
             <h1><img src="{% static 'img/logo.jpg' %}" width="30"> Legit Busog Restaurant</h1>
         </div>
     </nav>
-   
+
     {% block content %}
     {% endblock %}
 
@@ -124,5 +129,6 @@
         </div>
     </footer>
 </body>
+
 </html>
 {% block javascripts %}{% endblock javascripts %}
