--- a/main/templates/main/admin/index.html
+++ b/main/templates/main/admin/index.html
@@ -33,42 +33,42 @@ Dashboard
         <div class="col-lg-4 col-sm-6 col-12">
             <div class="dash-count">
                 <div class="dash-counts">
-                    <h4>0</h4>
+                    <h4>{{ count_pending }}</h4>
                     <h5>Pending</h5>
                 </div>
                 <div class="dash-imgs">
                     <i data-feather="user"></i>
                 </div>
                 <div class="flex">
-                    <a class="btn btn-primary" href="">View</a>
+                    <a class="btn btn-primary" href="{% url 'admin_pending_order' %}">View</a>
                 </div>
             </div>
         </div>
         <div class="col-lg-4 col-sm-6 col-12 d-flex">
             <div class="dash-count das1">
                 <div class="dash-counts">
-                    <h4>0</h4>
+                    <h4>{{ count_pd }}</h4>
                     <h5>Processing</h5>
                 </div>
                 <div class="dash-imgs">
                     <i data-feather="rotate-cw"></i>
                 </div>
                 <div class="flex">
-                    <a class="btn text-white" href="">View</a>
+                    <a class="btn text-white" href="{% url 'admin_process_order' %}">View</a>
                 </div>
             </div>
         </div>
         <div class="col-lg-4 col-sm-12 col-12 d-flex">
             <div class="dash-count das2">
                 <div class="dash-counts">
-                    <h4>0</h4>
+                    <h4>{{ count_completed }}</h4>
                     <h5>Completed</h5>
                 </div>
                 <div class="dash-imgs">
                     <i data-feather="check-circle"></i>
                 </div>
                 <div class="flex">
-                    <a class="btn text-white" href="">View</a>
+                    <a class="btn text-white" href="{% url 'admin_completed_order' %}">View</a>
                 </div>
             </div>
         </div>
@@ -101,28 +101,82 @@ Dashboard
                             <th>Action</th>
                         </tr>
                     </thead>
+                    {% for order in orders %}
                     <tbody>
                         <tr>
-                            <td>2023-0001</td>
+                            <td>{{ order.id}}</td>
                             <td>
-                                <a href="">
-                                    <img width="50" src="{% static 'img/dish.png' %}" alt="vehicle">
+                                <a href="{{ order.product.image.url }}">
+                                    <img width="50" src="{{ order.product.image.url }}" alt="vehicle">
                                 </a>
                             </td>
-                            <td>Food 1</td>
-                            <td>Category 1</td>
-                            <td>10</td>
-                            <td>Customer 1</td>
-                            <td><a class="bg-danger text-white rounded p-1">Pending</a></td>
-                            <td>Sept. 16, 2023 03:00 pm</td>
+                            <td>{{ order.product.name }}</td>
+                            <td>{{ order.product.category }}</td>
+                            <td>{{ order.quantity }}</td>
+                            <td>{{ order.user.first_name | title }} {{ order.user.last_name | title }}</td>
+                            <td>
+                                <a class="bg-danger text-white rounded p-1">{{ order.status }}</a>
+                            </td>
+                            <td>{{ order.date }}</td>
                             <td>
                                 <button type="button" id="" class="btn btn-sm btn-success m-2" data-bs-toggle="modal"
-                                        data-bs-target="#approvedModal"><i class="fa fa-check"></i> Approved</a>
+                                        data-bs-target="#appModal{{ order.id }}"><i class="fa fa-check"></i>Approved</a>
+
                                     <button type="button" id="" class="btn btn-sm btn-secondary" data-bs-toggle="modal"
-                                            data-bs-target="#cancelModal"><i class="fa fa-times"></i> Cancel</a>
+                                            data-bs-target="#caModal{{ order.id }}"><i
+                                           class="fa fa-times"></i>Cancel</a>
                             </td>
                         </tr>
                     </tbody>
+                    <!-- Confirm Modal -->
+                    <div class="modal fade" id="appModal{{ order.id }}">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <form action="" method="post" id="app_frm">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalLabel">Confirming...?</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <input name="id" type="hidden">
+                                        <p>Are you sure you want to Confirm this data?</p>
+                                    </div>
+                                    <div class="modal-footer float-end">
+                                        <a type="submit" class="btn btn-dark"
+                                           href="{% url 'admin_toProcess_order' order.id %}">Yes</a>
+                                        <a class="btn btn-cancel" data-bs-dismiss="modal" aria-label="Close">Cancel</a>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Delete Modal -->
+                    <div class="modal fade" id="caModal{{order.id}}">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <form action="{% url 'admin_toCancel_order' order.id %}" method="POST" id="ca_frm">
+                                    {% csrf_token %}
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalLabel">Canceling...?</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <input name="id" type="hidden">
+                                        <p>Are you sure you want to cancel this data?</p>
+                                        <input type="text" class="form-control" placeholder="Your Reason" name="reason"
+                                               required>
+                                    </div>
+                                    <div class="modal-footer float-end">
+                                        <button type="submit" class="btn btn-dark">Yes</button>
+                                        <a class="btn btn-cancel" data-bs-dismiss="modal" aria-label="Close">Cancel</a>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                    {% endfor %}
                 </table>
             </div>
         </div>
