--- a/main/templates/main/login_register/register.html
+++ b/main/templates/main/login_register/register.html
@@ -6,10 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login and Register Page</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" 
-            rel="stylesheet" 
-            integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
-            crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
 <body>
@@ -20,7 +18,7 @@
                     <a href="{% url 'index' %}"><img src="{% static 'img/logo.jpg' %}" alt=""></a>
                 </div>
                 <div class="col-md-6">
-                  <h3 class="mb-3">Register Now</h3>
+                    <h3 class="mb-3">Register Now</h3>
                     <div class="bg-white shadow rounded">
                         <div class="row">
                             <div class="row">
@@ -43,7 +41,9 @@
                                         <div class="col-12">
                                             <label for="first_name">First Name</label>
                                             <div class="input-group">
-                                                <input type="text" name="first_name" id="first_name" class="form-control form-control-sm rounded-pill" placeholder="First Name" required>
+                                                <input type="text" name="first_name" id="first_name"
+                                                       class="form-control form-control-sm rounded-pill"
+                                                       placeholder="First Name" required>
                                                 <div class="invalid-feedback">
                                                     Please provide your first name.
                                                 </div>
@@ -53,7 +53,9 @@
                                         <div class="col-12">
                                             <label for="last_name">Last Name</label>
                                             <div class="input-group">
-                                                <input type="text" name="last_name" id="last_name" class="form-control form-control-sm rounded-pill" placeholder="Last Name" required>
+                                                <input type="text" name="last_name" id="last_name"
+                                                       class="form-control form-control-sm rounded-pill"
+                                                       placeholder="Last Name" required>
                                                 <div class="invalid-feedback">
                                                     Please provide your last name.
                                                 </div>
@@ -63,7 +65,8 @@
                                         <div class="col-12">
                                             <label for="dob">Date of Birth</label>
                                             <div class="input-group">
-                                                <input type="date" name="date_of_birth" id="dob" class="form-control form-control-sm rounded-pill" required>
+                                                <input type="date" name="date_of_birth" id="dob"
+                                                       class="form-control form-control-sm rounded-pill" required>
                                                 <div class="invalid-feedback">
                                                     Please provide your date of birth.
                                                 </div>
@@ -72,7 +75,8 @@
                                         <div class="col-12">
                                             <label for="address">Address</label>
                                             <div class="input-group">
-                                                <input type="text" name="address" id="address" placeholder="Address" class="form-control form-control-sm rounded-pill" required>
+                                                <input type="text" name="address" id="address" placeholder="Address"
+                                                       class="form-control form-control-sm rounded-pill" required>
                                                 <div class="invalid-feedback">
                                                     Please provide your address.
                                                 </div>
@@ -81,7 +85,9 @@
                                         <div class="col-12">
                                             <label for="contact">Contact</label>
                                             <div class="input-group">
-                                                <input type="text" name="contact" id="contact" placeholder="Contact" class="form-control form-control-sm rounded-pill" required>
+                                                <input type="text" name="contact" id="contact"
+                                                       placeholder="ex. +63xxxxxxxxxx"
+                                                       class="form-control form-control-sm rounded-pill" required>
                                                 <div class="invalid-feedback">
                                                     Please provide your contact.
                                                 </div>
@@ -90,7 +96,8 @@
                                         <div class="col-12">
                                             <label for="email">Email</label>
                                             <div class="input-group">
-                                                <input type="email" name="email" id="email" placeholder="Email" class="form-control form-control-sm rounded-pill" required>
+                                                <input type="email" name="email" id="email" placeholder="Email"
+                                                       class="form-control form-control-sm rounded-pill" required>
                                                 <div class="invalid-feedback">
                                                     Please provide your email.
                                                 </div>
@@ -99,7 +106,8 @@
                                         <div class="col-12">
                                             <label for="pass">Password</label>
                                             <div class="input-group">
-                                                <input type="password" name="password" id="pass" placeholder="Password" class="form-control form-control-sm rounded-pill" required>
+                                                <input type="password" name="password" id="pass" placeholder="Password"
+                                                       class="form-control form-control-sm rounded-pill" required>
                                                 <div class="invalid-feedback">
                                                     Please provide your password.
                                                 </div>
@@ -107,7 +115,8 @@
                                         </div>
                                         <button class="btn btn-dark rounded-pill mt-4">Register</button>
                                         <hr>
-                                        <a href="{% url 'login' %}" class="text-center">Already have an account? Back to Login.</a>
+                                        <a href="{% url 'login' %}" class="text-center">Already have an account? Back to
+                                            Login.</a>
                                     </form>
                                 </div>
                             </div>
@@ -118,22 +127,23 @@
         </div>
     </div>
 </body>
+
 </html>
 
 <script>
     (function () {
-    'use strict'
-    var forms = document.querySelectorAll('.needs-validation')
-    Array.prototype.slice.call(forms)
-        .forEach(function (form) {
-        form.addEventListener('submit', function (event) {
-            if (!form.checkValidity()) {
-            event.preventDefault()
-            event.stopPropagation()
-            }
+        'use strict'
+        var forms = document.querySelectorAll('.needs-validation')
+        Array.prototype.slice.call(forms)
+            .forEach(function (form) {
+                form.addEventListener('submit', function (event) {
+                    if (!form.checkValidity()) {
+                        event.preventDefault()
+                        event.stopPropagation()
+                    }
 
-            form.classList.add('was-validated')
-        }, false)
-        })
+                    form.classList.add('was-validated')
+                }, false)
+            })
     })()
 </script>
